# server/src/routes/search.js
@@ -7,11 +7,11 @@ const authenticate = require('../middlewares/authorization');
 const {search} = require('../services/search_service');
 
 router.get('/', authenticate, async (req, res) => {
-    const {category, people} = req.query;
+    const {query} = req.query;
     console.log("req.query", req.query)
     try {
         logger.info(`Search Endpoint: GET /search`);
-        const searchResults = await search(category, people);
+        const searchResults = await search(query);
         returnResponse(res, {data: searchResults}, StatusCodes.OK, ReasonPhrases.OK)
     } catch (error) {
         logger.error(`Error in GET /search: ${error.toString()}`);
